# halo

./: README.md  pyproject.toml
trading_system/: .gitignore  db.sqlite3  trade_data.csv
trading_system/trades/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
trading_system/trades/management/commands/: bulk_trades.py
trading_system/trades/migrations/: 0001_initial.py  0002_alter_stock_id.py
trading_system/trading_system/: settings.py  urls.py
